--- a/ss31/g9/ss31_g9.html
+++ b/ss31/g9/ss31_g9.html
@@ -15,9 +15,9 @@
 
     <ul id="myUL">
       <!-- dữ liệu mẫu ko được sử dụng  -->
-      <!-- <li class="checked">
-        Pay bills <span class="btn-del" id="btnDel" onclick="delItem()">X</span>
-      </li> -->
+      <li class="checked" onclick="choosen()">
+        Pay bills <span class="close" id="btnDel" onclick="delItem()">X</span>
+      </li>
     </ul>
 
     <script>
@@ -37,8 +37,8 @@
       const renderData = () => {
         listTask.innerHTML = "";
         let htmls = todoLists.map((item, index) => {
-          return `<li>${item.task} 
-          <span class="btn-del" id="btnDel" onclick="delItem('${item.task}',${index})">X</span></li>`;
+          return `<li onclick="choosen(event)">${item.task} 
+          <span class="close" id="btnDel" onclick="delItem('${item.task}',${index})">X</span></li>`;
         });
 
         const convertArr = htmls.join("");
@@ -68,6 +68,17 @@
         if (test) {
           todoLists.splice(index, 1);
           renderData();
+        }
+      }
+
+      function choosen(event) {
+        let li = event.target;
+        if (li.tagName === "LI") {
+          document.querySelectorAll("#myUL li").forEach((item) => {
+            item.classList.remove("checked");
+          });
+
+          li.classList.add("checked");
         }
       }
     </script>
