--- a/ss31/xs10/ss31_xs10.html
+++ b/ss31/xs10/ss31_xs10.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ss31 xs10</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="ss31_xs10.css" />
   </head>
   <body>
-    <h1>Danh sách nhân viên</h1>
+    <h3>Danh sách nhân viên</h3>
     <form action="#" class="formAdd">
       <div>
         <input type="text" placeholder="Tên" id="userName" />
@@ -21,32 +15,64 @@
       </div>
       <button id="btnAdd" class="btn-add">Thêm nhân viên</button>
     </form>
-    <table class="table">
-      <thead class="table-light">
-        <th>STT</th>
-        <th>Tên</th>
-        <th>Chức vụ</th>
-      </thead>
-      <tbody id="listData">
-        <tr>
+
+    <div class="table-container">
+      <table class="table">
+        <thead class="table-light">
+          <th>STT</th>
+          <th>Tên</th>
+          <th>Chức vụ</th>
+        </thead>
+        <tbody id="listData">
+          <!-- <tr>
           <td></td>
           <td></td>
           <td></td>
-        </tr>
-      </tbody>
-    </table>
+        </tr> -->
+        </tbody>
+      </table>
+    </div>
+
+    <div class="listButton">
+      <button type="button" class="btnPerPage" id="btnPre">Previous</button>
+      <div id="listBtnPage">
+        <!-- <button type="button" class="btnPerPage">1</button> -->
+      </div>
+      <button type="button" class="btnPerPage" id="btnNext">Next</button>
+    </div>
 
     <script>
       let inputName = document.querySelector("#userName");
       let inputRole = document.querySelector("#role");
       let btnAdd = document.querySelector("#btnAdd");
       let listData = document.querySelector("#listData");
-      let arrUsers = [];
+      let arrUsers = [
+        { id: 1, name: "Nguyen Van A", role: "dev" },
+        { id: 2, name: "Nguyen Van b", role: "design" },
+        { id: 3, name: "Nguyen Van c", role: "manage" },
+        { id: 4, name: "Nguyen Van d", role: "dev" },
+        { id: 5, name: "Nguyen Van e", role: "dev" },
+        { id: 6, name: "Nguyen Van f", role: "manage" },
+      ];
+      let btnPerPages = document.querySelector("#listBtnPage");
+      let btnPre = document.querySelector("#btnPre");
+      let btnNext = document.querySelector("#btnNext");
+
+      let currPage = 1;
+      let totalPerPage = 5;
+      let totalRecord = arrUsers.length;
+
+      let totalPages = Math.ceil(totalRecord / totalPerPage);
 
       const renderData = () => {
         listData.innerHTML = "";
+        // hien thi table
+        const start = (currPage - 1) * totalPerPage;
+        const end = totalPerPage * currPage;
 
-        let htmls = arrUsers.map((item, index) => {
+        const result = arrUsers.slice(start, end);
+
+        let htmls = result.map((item, index) => {
           return `
                 <tr>
                     <td>${item.id}</td>
@@ -58,6 +84,54 @@
         let convertArr = htmls.join("");
         listData.innerHTML = convertArr;
       };
+
+      renderData();
+      const renderPages = () => {
+        btnPerPages.innerHTML = "";
+        totalRecord = arrUsers.length;
+        totalPages = Math.ceil(totalRecord / totalPerPage);
+        // xu ly button page
+        for (let i = 1; i <= totalPages; i++) {
+          const btnElement = document.createElement("button");
+          btnElement.classList.add("btnPerPage");
+          btnElement.textContent = i;
+
+          if (currPage === i) {
+            btnElement.classList.add("btn-active");
+          }
+
+          btnElement.addEventListener("click", function () {
+            currPage = i;
+            renderPages();
+            renderData();
+          });
+
+          btnPerPages.appendChild(btnElement);
+        }
+        btnPre.disabled = currPage === 1;
+        btnNext.disabled = currPage === totalPages;
+      };
+      renderPages();
+
+      btnPre.addEventListener("click", function (params) {
+        console.log("click pre");
+
+        if (currPage > 1) {
+          currPage--;
+          renderPages();
+          renderData();
+        }
+      });
+
+      btnNext.addEventListener("click", function (params) {
+        console.log("click next");
+
+        if (currPage < totalPages) {
+          currPage++;
+          renderPages();
+          renderData();
+        }
+      });
 
       btnAdd.addEventListener("click", function (event) {
         event.preventDefault();
@@ -73,17 +147,13 @@
           };
 
           arrUsers.push(objUser);
+
           renderData();
+          renderPages();
         } else {
           alert("Dữ liệu rỗng");
         }
       });
     </script>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
